[workspace]
members = [
    "src/add_two_numbers",
    "src/binary_search",
    "src/integer-to-roman",
    "src/letter_combinations_numbers",
    "src/list_node",
    "src/longest_no_repeat",
    "src/merge-two-sorted-lists",
    "src/pairs_spells_potions",
    "src/remove_nth_node",
    "src/reverse_integer",
    "src/reverse_linked_list",
    "src/roman-to-integer",
    "src/two_sum",
    "src/valid_sudoku",
]