[workspace]
members = [
    "src/rust/add_two_numbers",
    "src/rust/binary_search",
    "src/rust/integer_to_roman",
    "src/rust/letter_combinations_numbers",
    "src/rust/list_node",
    "src/rust/longest_no_repeat",
    "src/rust/merge_two_sorted_lists",
    "src/rust/pairs_spells_potions",
    "src/rust/remove_nth_node",
    "src/rust/reverse_integer",
    "src/rust/reverse_linked_list",
    "src/rust/roman_to_integer",
    "src/rust/rotate_image",
    "src/rust/sliding_window_maximum",
    "src/rust/swap_nodes_in_pairs",
    "src/rust/two_sum",
    "src/rust/valid_parentheses",
    "src/rust/valid_sudoku",
]

resolver = "2"
